<?xml version="1.0"?>
<package format="2">
  <name>butterworth</name>
  <version>0.0.0</version>
  <description>butterworth imu filter</description>

  <author email="moritz@auterion.com">Moritz Zimmermann</author>
  <maintainer email="moritz@auterion.com">Moritz Zimmermann</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
</package>
